--- a/estilos.css
+++ b/estilos.css
@@ -67,6 +67,7 @@ h2:hover{
 }
 .form{
     color: white;
+    text-shadow: 1px 1px 2px black;
 }
 footer{
     text-align: center;
@@ -88,6 +89,10 @@ footer i{
 .jajas{
     color: #f0d7ab;
     text-decoration: none;
+}
+.carousel-item img{
+height: 70%;
+width: 100%;
 }
 
 @media screen and (max-width:1240px) {
