--- a/estilos.css
+++ b/estilos.css
@@ -54,8 +54,8 @@ h2:hover {
   padding: 2.5rem; }
 
 .img {
-  width: 300px;
-  height: 410px; }
+  height: 410px;
+  width: 300px; }
 
 .contenedor p {
   color: white; }
@@ -105,3 +105,12 @@ footer i {
 .carousel-item img {
   height: 70%;
   width: 100%; }
+
+.boton, .boton--comprar {
+  background-color: white;
+  color: black;
+  border-radius: 10px;
+  border: 1px solid black; }
+
+.boton--comprar {
+  background-color: #f0d7ab; }
