--- a/estilos.scss
+++ b/estilos.scss
@@ -46,9 +46,12 @@ h2:hover{
     align-items: center;
     padding: 2.5rem;
 }
+@mixin sizes($width, $height){
+    height: $height;
+    width: $width;
+}
 .img{
-    width: 300px;
-    height: 410px;
+    @include sizes(300px, 410px)
 }
 .contenedor p{
     color: white;
@@ -98,4 +101,14 @@ footer i{
 .carousel-item img{
 height: 70%;
 width: 100%;
+}
+.boton{
+    background-color: white;
+    color: black;
+    border-radius: 10px;
+    border: 1px solid black;
+}
+.boton--comprar{
+@extend .boton;
+background-color: $color2;
 }
